--- a/src/stylesApp.css
+++ b/src/stylesApp.css
@@ -84,7 +84,7 @@ body{
     padding-top: 6px;
  }
 
- #temperature{
+ #temperatures{
     font-size: 48px;
     font-weight: 400;
     line-height: 1;
@@ -96,11 +96,14 @@ font-size: 16px;
 
  #Celsium{
    position: relative;
-   top: -20px;
+   top: 3px;
  }
 
  #units{
    position: relative;
    top: 3px;
-   
+ }
+
+ #description{
+   text-transform: capitalize;
  }
